--- a/style.css
+++ b/style.css
@@ -84,7 +84,7 @@ a{
   box-shadow: inset 0 1px 0 0 rgba(0, 0, 0, 0.05), inset 0 0.1em 0.1em 0 rgba(0, 0, 0, 0.025);
 }
 .section-1 {
-  background-image: url(https://pixelarity.com/items/demos/prologue/cyan/images/banner.jpg);
+  background-image: url(./images/banner.jpg);
   color: #ffffffb5;
 
   text-align: center;
